fixed bar wrapping issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,9 @@
     padding: 50px 50px 0 50px;
     min-height: 100vh
 }
+
+@media only screen and (max-width: 500px){
+    .App{
+        padding: 50px 0 0 0;
+    }
+}
